[gd_scene load_steps=11 format=3 uid="uid://c0jtyewq67b7y"]

[ext_resource type="Texture2D" uid="uid://chlnpywefd4go" path="res://Sosed biot.png" id="1_axgax"]
[ext_resource type="Script" path="res://naighbor_2.gd" id="1_xaws4"]
[ext_resource type="Texture2D" uid="uid://dc868f8j0rltj" path="res://Sosedidet.png" id="2_21qvm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b2j4u"]
radius = 17.1172

[sub_resource type="CircleShape2D" id="CircleShape2D_nk72u"]
radius = 318.926

[sub_resource type="AtlasTexture" id="AtlasTexture_538bw"]
atlas = ExtResource("1_axgax")
region = Rect2(0, 0, 43, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv8a7"]
atlas = ExtResource("1_axgax")
region = Rect2(43, 0, 43, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yry0t"]
atlas = ExtResource("2_21qvm")
region = Rect2(0, 0, 38, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7y80"]
atlas = ExtResource("2_21qvm")
region = Rect2(38, 0, 38, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_tjl1r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_538bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv8a7")
}],
"loop": true,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yry0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7y80")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Naighbor 2" type="Node2D"]
script = ExtResource("1_xaws4")

[node name="min_Detector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="min_Detector"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_b2j4u")

[node name="Detector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_nk72u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tjl1r")
animation = &"Death"

[connection signal="body_entered" from="min_Detector" to="." method="_on_min_detector_body_entered"]
[connection signal="body_exited" from="min_Detector" to="." method="_on_min_detector_body_exited"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
